--- a/dataformats.Rmd
+++ b/dataformats.Rmd
@@ -6,24 +6,23 @@ output:
     fig_caption: no
 ---
 
-```{r, echo=FALSE, warning=FALSE, message=FALSE}
-whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
-
-require(knitr)
-require(ggplot2)
-require(grid)
-require(leaps)
-```
-`r rmd$basefontsize()`
-
 <style>
 table, th, td { text-align:right; }
 th, td {padding: 10px;}
 </style>
 
-#Vectors, Matrices, Arrays, Dataframes and Lists
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+whichcomp <- strsplit(getwd(),"/")[[1]][3]
+load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+library(knitr)
+opts_chunk$set(fig.width=6, fig.align = "center", 
+      out.width = "70%", warning=FALSE, message=FALSE)
+library(ggplot2)
+library(grid)
+```
+`r hl()$basefontsize()`
 
+#Data Formats: Vectors, Matrices, Arrays, Dataframes and Lists
 
 ##Vectors
 
@@ -60,12 +59,10 @@ diag(3)
 
 we can control how the matrix is filled in:
 
-
 ```{r}
 matrix(1:8, nrow=2)
 matrix(1:8, nrow=2, byrow = TRUE)
 ```
-
 
 just like vectors a matrix is all of the same type, with R doing type conversion if necessary:
 
@@ -94,17 +91,33 @@ Here is a strange way to make a matrix:
 ```{r}
 x <- 1:6
 x
-dim(x) <- c(2,3)
+dim(x) <- c(2, 3)
 x
 ```
 
+
+What happens if we try to make a matrix out of a vector that doesn't have the right number of entries?
+
+```{r warning=TRUE}
+matrix(1:5, 2, 2)
+```
+
+not surprisingly it just uses the elements needed.
+
+```{r warning=TRUE}
+matrix(1:3, 2, 2)
+```
+
+In this case R just starts all over again. This is called *recycling*.
+
+In either case R gives a warning.
 
 ##Arrays
 
 an array is a k-dimensional matrix. For example
 
 ```{r}
-array(1:8, dim=c(2,2,2))
+array(1:8, dim=c(2, 2, 2))
 ```
 
 Often these come about as a 3-way table: 
@@ -117,7 +130,7 @@ table(x,y,z)
 ```
 
 
-##Data Frame
+##Dataframe
 
 sometimes we have several vectors of the same length but of different types, then we can put them together as a data frame:
 
