--- a/datatypes.Rmd
+++ b/datatypes.Rmd
@@ -6,21 +6,21 @@ output:
     fig_caption: no
 ---
 
-```{r, echo=FALSE, warning=FALSE, message=FALSE}
-whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
-
-require(knitr)
-require(ggplot2)
-require(grid)
-require(leaps)
-```
-`r rmd$basefontsize()`
-
 <style>
 table, th, td { text-align:right; }
 th, td {padding: 10px;}
 </style>
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+whichcomp <- strsplit(getwd(),"/")[[1]][3]
+load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+library(knitr)
+opts_chunk$set(fig.width=6, fig.align = "center", 
+      out.width = "70%", warning=FALSE, message=FALSE)
+library(ggplot2)
+library(grid)
+```
+`r hl()$basefontsize()`
 
 #Basic Data Types
 
@@ -51,7 +51,28 @@ Here Inf is of course infinite, and NaN standts for *not a number*. These can be
 exp(-Inf)
 ```
 
-Objects of type character are identifued with "":
+Numeric comes in two forms, integer and double. If you want to make sure an object is an integer use  
+
+```{r}
+n <- 2L
+is.integer(n)
+```
+
+although there is usually no advantage to this.
+
+R can also handle complex numbers:
+
+```{r}
+z <- 1i
+u <- 1+1i
+v <- 1-1i
+z^2
+u+v
+u*v
+```
+
+
+Objects of type character are identified with quotes:
 
 ```{r}
 y <- "A"
@@ -60,7 +81,7 @@ y <- "A"
 sometimes you want the " to be treated as a character. This can be done with the *escape character* \\:
 
 ```{r}
-"col=\"red\""
+"color=\"red\""
 ```
 
 
@@ -73,7 +94,7 @@ x <- c(3, 5, 6, 3, 4, 5)
 x
 ```
 
-If you want a vector of characters use ""
+If you want a vector of characters again use quotes:
 
 ```{r}
 x <- c("A", "A", "B", "C")
@@ -139,7 +160,7 @@ in this case the vector is a mixture of numeric and character. But R vectors can
 There are a number of routines that 
 
 a.  test for a data type  
-b.  covert to a data type
+b.  convert to a data type
 
 they either start with *is.* or with *as.*:
 
@@ -159,7 +180,7 @@ as.numeric(x)
 ```
 
 ```{r}
-as.numeric(c("1","2", "5",FALSE, 4, TRUE))
+as.numeric(c("1", "2", "5", FALSE, 4, TRUE))
 ```
 
 so FALSE gets turned into 0, TRUE into 1.
@@ -180,7 +201,9 @@ mydates[2]-mydates[1]
 
 ##Factor
 
-a very common data type in Statistics is a factor. These are vectors with levels and possibly and ordering. Here is an example of their usage. Say we a list of students, identified by their year:
+a very common data type in Statistics is a factor. These are vectors with a fixed number of different values (called  levels) and possibly an ordering.
+
+Here is an example of their usage. Say we a list of students, identified by their year:
 
 ```{r echo=3}
 set.seed(1)
@@ -200,12 +223,30 @@ there are two problems with this table:
 a.  the ordering is wrong  
 b.  the Freshman class is missing.
 
-We can fix both of these:
+We can fix both of these by turning the vector into a factor:
 
 ```{r}
-students <- factor(students, 
+students.fac <- factor(students, 
   levels = c("Freshman", "Junior", "Sophomore", "Senior"),
   ordered=TRUE)
-table(students)
+table(students.fac)
+```
+
+Here is another difference:
+
+```{r}
+c(students, "Senior")
+c(students, "Graduate")
+c(students.fac, "Senior")
+c(students.fac, "Graduate")
+```
+
+so we can easily add an element to students, but if we do the same with student.fac it gets very confused! Strangely enough, it doesn't even work when the added item is in the list of levels!
+
+Here is what you can do:
+
+```{r}
+lvls <- levels(students.fac)
+factor(c(as.character(students.fac), "Senior", "Graduate"), levels = c(lvls, "Graduate"), ordered=TRUE)
 ```
 
