--- a/generate.vectors.Rmd
+++ b/generate.vectors.Rmd
@@ -6,25 +6,25 @@ output:
     fig_caption: no
 ---
 
-```{r, echo=FALSE, warning=FALSE, message=FALSE}
-whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
-
-require(knitr)
-require(ggplot2)
-require(grid)
-require(leaps)
-```
-`r rmd$basefontsize()`
-
 <style>
 table, th, td { text-align:right; }
 th, td {padding: 10px;}
 </style>
 
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+whichcomp <- strsplit(getwd(),"/")[[1]][3]
+load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+library(knitr)
+opts_chunk$set(fig.width=6, fig.align = "center", 
+      out.width = "70%", warning=FALSE, message=FALSE)
+library(ggplot2)
+library(grid)
+```
+`r hl()$basefontsize()`
+
 #Generating Vectors
 
-There are numerous ways to generate vectors which have some structure. Here are some useful commands
+There are numerous ways to generate vectors which have some structure. Here are some useful commands:
 
 The easiest way to do this is to use the *c* command:
 
@@ -46,7 +46,7 @@ and then we can combine these:
 c(1:5, 11:15)
 ```
 
-`r rmd$vspace()`
+`r hl()$vspace()`
 
 there are also a number of commands for this purpose:
 
@@ -61,7 +61,6 @@ seq(0, 10, length=20)
 -  sequence
 
 this creates a series of sequences of integers each ending by the numbers given as arguments:
-
 
 ```{r}
 sequence(1:5)
@@ -84,7 +83,9 @@ rep(1:10, 1:10)
 
 -  gl
 
-The function *gl* (generate levels) is very useful because it generates regular series of factors. The usage of this fonction is gl(k, n) where k is the number of levels (or classes), and n is the number of replications in each level. Two options may be used: length to specify the number of data produced, and labels to specify the names of the levels of the factor. 
+The function *gl* (generate levels) is very useful because it generates regular series of factors. The usage of this fonction is gl(k, n) where k is the number of levels (or classes), and n is the number of replications in each level. 
+
+Two options may be used: length to specify the number of data produced, and labels to specify the names of the levels of the factor. 
 
 ```{r}
 gl(3, 5)
@@ -103,7 +104,7 @@ expand.grid(1:2, 1:3)
 expand.grid(First=1:2, Second=1:3, Third=c("A", "B"))
 ```
 
-there are anumber of R routines who need the data in this format as arguments, so this is an easy way to convert them.
+there are a number of R routines who need the data in this format as arguments, so this is an easy way to convert them.
 
 ##Expressions
 
@@ -120,14 +121,13 @@ eval(exp1)
 
 Expressions can be used for many things. Here are two examples:
 
-I want to draw the graph of a function, including the equation:
+1.  I want to draw the graph of a function, including the equation:
 
 ```{r}
 curve(x^2*exp(-x^2), -2, 2, main=expression(x^2*exp(-x^2)), ylab="")
 ```
 
-
-An expression can be created from a variable of mode character. Some functions take expressions as arguments, for example D which returns partial derivatives:
+2.  Do symbolic math. For derivatives we have the function *D*, which returns partial derivatives:
 
 ```{r}
 D(exp1, "x")
