--- a/graphs.Rmd
+++ b/graphs.Rmd
@@ -19,7 +19,7 @@ opts_chunk$set(fig.width=6, fig.align = "center",
 library(ggplot2)
 library(grid)
 ```
-`r rmd$basefontsize()`
+`r hl()$basefontsize()`
 
 #Graphs
 
@@ -73,21 +73,41 @@ barplot(tbl.students.fac, main = "Our Students",
 ##Histogram
 
 ```{r}
-x <- rnorm(1000, 100, 30)
+x <- rnorm(1000, 100, 20)
 hist(x, breaks=50, main = "IQ",
         xlab = "IQ", ylab = "Counts")
 ```
 
 Often the hist command is useful for its side effect of counting:
 
-```{r}
+```{r error=TRUE}
+range(x)
 hist(x, breaks=c(0, 50, 80, 100, 120, 150, 250), plot = FALSE)$counts
 ```
 
-##Boxplots
+Often we want to compare a histogram with a theoretical curve, say a probability density
+
+```{r}
+x <- c(rnorm(1500, 100, 20), rnorm(1000, 140, 10))
+hist(x, breaks=50, main = "", freq=FALSE)
+f <- function(x) 1.5*dnorm(x, 100, 20) + dnorm(x, 140, 10)
+I <- integrate(f, 0, 200)$value
+curve(f(x)/I, from=min(x), to=max(x), add=TRUE, col="blue", lwd=2)
+```
+
+##Empirical Distribution Function
+
+```{r}
+plot(ecdf(x))
+```
+
+
+##Boxplot
 
 ```{r}
 boxplot(x, horizontal = TRUE)
+attach(mothers)
+boxplot(Length~Status)
 ```
 
 ##Normal Probability Plot
@@ -134,7 +154,7 @@ legend(250, 33, paste(2*2:4, "Cylinders"),
 
 ##Multiple Graphs
 
-sometimes we want to combine several garphs into one
+sometimes we want to combine several graphs into one
 
 ```{r}
 par(mfrow=c(2, 2))
@@ -145,11 +165,11 @@ hist(rchisq(1000, 2), 50,
      main=expression(paste(chi^2, " Distribution, df=2")))
 ```
 
-This works fine for rectangular arrays. For mor complicted graphs we have the layout command. Let's create a scatterplot of mpg by hp with marginal boxplots:
+This works fine for rectangular arrays. For more complicated graphs we have the *layout* command. Let's create a scatterplot of mpg by hp with marginal boxplots:
 
 ```{r}
-layout(matrix(c(2,0,1,3), 2, 2, byrow = TRUE), 
-             c(3,1), c(1,3), TRUE)
+layout(matrix(c(2, 0, 1, 3), 2, 2, byrow = TRUE), 
+             c(3, 1), c(1, 3), TRUE)
 par(mar = c(3, 3, 1, 1))
 plot(hp, mpg)
 par(mar = c(0, 3, 1, 1))
@@ -158,15 +178,15 @@ par(mar = c(3, 0, 1, 1))
 boxplot(mpg, axes = FALSE)
 ```
 
-##Functions to do graphs
+##Functions that create graphs
 
 When I write a paper or a talk or anything else that requires some graph I always write a routine *plot.mytalk*, which has everything to recreate every graph. This is a great way to not only make changes if necessary but also to remind myself what I did back years ago when I wrote it.
 
-Caveat: these day R markdown can be used for the same purpose
+Caveat: these days R Markdown can be used for the same purpose
 
 ##Graphs that don't look like Graphs
 
-we can use R trae other type of pictures. Consider this diagram, which I use to illustrate the topic of Cause vs Effect:
+we can use R to make other types of pictures. Consider this diagram, which I use to illustrate the topic of Cause vs Effect:
 
 ```{r, echo=FALSE}
 draw.cause.effect <- function() {
@@ -197,16 +217,25 @@ arrows(70, 70, 78, 55)
 }
 ```
 
+An important example of this are maps:
+
+```{r}
+library(maps)
+map("usa")
+text(-87.623177, 41.881832, "Chicago", cex=1.3)
+```
+
+
 ##Printing Graphs
 
-Often we need to get a graph as a png or a postscript file, so we can include in a webpage or a latex paper. I have to do this often enough I wrote a routine for it:
+Often we need to save a graph as a png or a postscript file, so we can include it in a webpage or a latex document. I have to do this often enough I wrote a routine for it:
 
 ```{r}
 graph.out <-
 function (f, foldername, graphname, format = "png") 
 {
-  file <- paste(foldername, graphname, ".", format, sep = "")
-  mcat(file)
+  file <- paste0(foldername, graphname, ".", format)
+  cat(file)
   if (format == "png") 
       png(file)
   if (format == "pdf") 
@@ -223,5 +252,15 @@ function (f, foldername, graphname, format = "png")
 }
 ```
 
-here *f* is a function that produces a graph
+here *f* is a function that produces a graph, so it might be called like this:
+
+```{r eval=FALSE}
+f <- function(x) hist(rnorm(1000), 50)
+graph.out(f, "C:/mygraphs", "myhist")
+```
+
+and now there should be a file myhist.png in the folder C:/mygraphs.
+
+ 
+ 
 
