--- a/index.Rmd
+++ b/index.Rmd
@@ -1,19 +1,27 @@
 ---
 header-includes: \usepackage{color}
 output:
-  html_document: default
   pdf_document:
     fig_caption: no
+  html_document: default
 ---
+
+<style>
+table, th, td { text-align:right; }
+th, td {padding: 10px;}
+</style>
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 whichcomp <- strsplit(getwd(),"/")[[1]][3]
 load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
-require(knitr)
-require(ggplot2)
-require(grid)
+library(knitr)
+opts_chunk$set(fig.width=6, fig.align = "center", 
+      out.width = "70%", warning=FALSE, message=FALSE)
+library(ggplot2)
+library(grid)
+library(stringr)
 ```
-`r rmd$basefontsize()`
+`r hl()$basefontsize()`
 
 #ESMA 6xxx Computing with R
 
@@ -30,27 +38,28 @@ require(grid)
 2.1&nbsp; [Data types](datatypes.html)  
 2.2&nbsp; [Vectors, matrices, dataframes and lists](dataformats.html)  
 2.3&nbsp; [Generating objects](generate.vectors.html)  
-2.4&nbsp; [Random Numbers](random.numbers.html)  
-2.5&nbsp; [Writing functions, Programming](write.functions.html)  
-2.6&nbsp; [Object-Oriented Programming](object.oriented.Rmd)  
-2.7&nbsp; [Subsetting](subset.html)   
+2.4&nbsp; [Subsetting](subset.html)
+2.5&nbsp; [Random Numbers](random.numbers.html)  
+2.6&nbsp; [Writing functions, Programming](write.functions.html)  
+2.7&nbsp; [Object-Oriented Programming](object.oriented.Rmd)  
 2.8&nbsp; [Vector arithmetic, Linear Algebra](vector.arithmetic.html)   
-2.9&nbsp; [Graphs](graphs.html)  
-2.10 [Data input/output, transfering R objects](io.html)  
-2.11 [Character manipulation, strngr](character.html)  
-2.12 [Environments, libraries](environments.html)  
-2.13 [Costumizing R: .First, .Rprofile, Dropbox](customize.html)  
+2.9&nbsp; [Character manipulation](character.html)  
+2.10 [Data input/output, transfering R objects](io.html)   
+2.11 [Graphs](graphs.html)  
+2.12 [Model Notation](model.notation.html)  
+2.13 [Environments, libraries](environments.html)    
+2.14 [Costumizing R: .First, .Rprofile, Dropbox](customization.html)  
 
 ##3  Extending R, Packages
 
-3.1&nbsp; [ggplot2](ggplot2.html)  
-3.2&nbsp; [Rcpp](rcpp.html)  
+3.1&nbsp; [Graphics with ggplot2](ggplot2.html)  
+3.2&nbsp; [C++ with Rcpp](rcpp.html)  
 3.3&nbsp; [Parallel and gpu computing](parallel.html)  
 3.4&nbsp; [Input/Output revisited](io1.hmtl)  
 3.5&nbsp; [The pipe, dplyr, tibbles, tidyverse](pipe.html)  
 3.6&nbsp; [Character manipulation with strngr](character1.html)  
 3.7&nbsp; [Dates with lubridate](dates.html)  
-3.8&nbsp; [Version Control, github](github.html)  
+3.8&nbsp; [Version Control and Collaboration with github](github.html)  
 3.9&nbsp; [Interactive Apps with shiny](shiny.html)  
 
 
