--- a/pipe.Rmd
+++ b/pipe.Rmd
@@ -13,14 +13,13 @@ th, td {padding: 10px;}
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 whichcomp <- strsplit(getwd(),"/")[[1]][3]
 load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
-rm(select)
 library(knitr)
 opts_chunk$set(fig.width=6, fig.align = "center", 
       out.width = "70%", warning=FALSE, message=FALSE)
 library(ggplot2)
 library(grid)
 ```
-`r rmd$basefontsize()`
+`r hl()$basefontsize()`
 
 #The pipe, dplyr, tibbles, tidyverse
 
@@ -29,7 +28,7 @@ The traditional workflow of R comes in large part from other computer languages.
 ```{r}
 df <- mtcars
 df1 <- subset(df, hp>70)
-ggplot(data=df1, aes(disp, mpg))+geom_point()
+ggplot(data=df1, aes(disp, mpg)) + geom_point()
 ```
 
 This is not how we think, though. That would go somehing like this:
@@ -42,7 +41,7 @@ In addition there is also the issue that we had to create an intermediate data s
 
 The *pipe* was invented to fix all of these problems.
 
-The basic package to use the piping is
+The basic package to use piping is
 
 ```{r}
 library(magrittr)
@@ -53,7 +52,7 @@ invented by Stefan Milton. The basic operator is %>%. The same as above can be d
 ```{r}
 mtcars %>%
   subset(x=., hp>70) %>%
-  ggplot(data=., aes(disp, mpg))+geom_point()
+  ggplot(data=., aes(disp, mpg)) + geom_point()
 ```
 
 In principle the pipe can always be used in this way:
@@ -61,12 +60,16 @@ In principle the pipe can always be used in this way:
 ```{r}
 x <- rnorm(10)
 round(mean(x), 3)
-x %>% mean() %>% round(digits = 3)
+x %>% 
+  mean() %>% 
+  round(digits = 3)
 ```
+
+Notice that here we called both mean and round without a needed argument. In principle the pipe will always use the data on the left of %>% as the first argument of the command on the right.
 
 At first it may not seem like writing x %>% f() is any easier than writing f(x), but this style of coding becomes very useful when applying multiple functions; in this case piping will allow one to think from left to right in the logical order of functions rather than from inside to outside in an ugly large nested statement of functions.
 
-`r rmd$hr()`
+`r hl()$hr()`
 
 The pipe is only a few years old, but there are already many packages that take advantage of it. The most important one, and a package useful in and of itself, is 
 
@@ -79,14 +82,14 @@ written by Hadley Wickham. In essence it is a replacement for the *apply* famili
 ```{r}
 mtcars %>%
   filter(hp>70) %>%
-  ggplot(data=., aes(disp, mpg))+geom_point()
+  ggplot(data=., aes(disp, mpg)) + geom_point()
 ```
 
-Notice how *filter* is aware of the pipe, it doesn't need to be told that it is supposed to work with mtcars. Sofar, *ggplot* is not, but this will change in the near future.
+Notice how *filter* is aware of the pipe, it doesn't need to be told that it is supposed to work with mtcars. So far, *ggplot* is not fully pipe aware (otherwise we could have written %>% geom_point()), but this will change in the near future.
 
 ##tibbles
 
-data frames have been the main data format of R since its beginnings, and are likely to stay that way for a long time. They do, however have some shortcomings. Among other things, when you type the name of a data frame and hit enter, all of it is shown, even if the data set is huge. On the other hand, interesting information such as the data types of the columns is not shown. To eliviate these (and some other) issues the data format *tibble* was invented. We can turn a data frame into a tibble with
+dataframes have been the main data format of R since its beginnings, and are likely to stay that way for a long time. They do, however have some shortcomings. Among other things, when you type the name of a dataframe and hit enter, all of it is shown, even if the data set is huge. On the other hand, interesting information such as the data types of the columns is not shown. To eliviate these (and some other) issues the data format *tibble* was invented. We can turn a dataframe into a tibble with
 
 ```{r}
 tmtcars <- as.tbl(mtcars)
@@ -107,13 +110,14 @@ Also, tibbles never use row.names, and it only recycles vectors of length 1. Thi
 
 ##dplyr
 
-We have already seen the filter command, the dplyr version of subset. Here the most important other dplyr commands: 
+We have already seen the filter command, the *dplyr* version of subset. Here are the most important *dplyr* commands: 
 
--  select() 	select columns  
--  arrange() 	re-order or arrange rows  
--  mutate() 	create new columns  
--  summarise() 	summarise values  
--  group_by() 	allows for group operations in the “split-apply-combine” concept
+-  filter()  select part of a data set by conditions (base R command: subset)
+-  select() 	select columns  (base R command: [ ])
+-  arrange() 	re-order or arrange rows  (base R commands: sort, order)
+-  mutate() 	create new columns  (base R commands: any math function)
+-  summarise() 	summarise values  (base R commands: mean, median etc)
+-  group_by() 	allows for group operations in the  “split-apply-combine” concept (base R command: none)
 
 
 ###Example: babynames
@@ -139,7 +143,7 @@ babynames %>%
       ggtitle('Names starting with "W"') 
 ```
 
-How often is my names used for a baby in the US?
+How often is my name used for a baby in the US?
 
 ```{r}
 babynames %>%
@@ -162,8 +166,7 @@ babynames %>%              #take babynames
     select(name) %>%       #then select names only
     table() %>%            #then count how often each happened  
     sort(decreasing = TRUE) %>% #then organize data
-    cbind()               # then turn data around for easier 
-                          #  reading      
+    cbind()               # then turn data around for easier reading  
 ```
 
 Let's say we want to save a data set made with the pipe. Logically we should be able to do this
@@ -182,7 +185,7 @@ wolfgangs <- babynames %>%              #take babynames
 print(wolfgangs, n=3)
 ```
 
-This unfortunately breaks the logic of piping. There is a better way, though. Just remember that the logic of the assignment character <-, it's an arrow!
+This unfortunately breaks the logic of piping. There is a better way, though. Just remember the logic of the assignment character <-, it's an arrow!
 
 
 ```{r error=T}
@@ -192,7 +195,7 @@ babynames %>%              #take babynames
 print(wolfgangs, n=3)
 ```
 
-`r rmd$hr()`
+`r hl()$hr()`
 
 Here is a common problem: say you have these two data sets:
 
@@ -212,7 +215,7 @@ students1 %>%
   left_join(students2)
 ```
 
-`r rmd$hr()`
+`r hl()$hr()`
 
 Let's say we want to find the times out of 100000 that the most popular names occured in the 2015:
 
@@ -248,7 +251,7 @@ but you can get all of them in one step with
 install.packages("tidyverse")
 ```
 
-They are all centered around *tidy data*. This is defined as data were
+*tidy data* is defined as data were
 
 1. Each variable you measure should be in one column.  
 2.  Each different observation of that variable should be in a different row.  
@@ -257,7 +260,7 @@ They are all centered around *tidy data*. This is defined as data were
 
 This is essentially the definition of a data frame, but it is enforced even more so by the *tibbles* format. The theory behind tidy data was described by Hadley Wickham in the article [Tidy Data](https://www.jstatsoft.org/index.php/jss/article/view/v059i10/v59i10.pdf),  Journal of Statistical Software. The packages in the tidyverse are all written to have a consistent look and feel and work naturally with tidy data.
 
-One big difference between data frames and tibbles is that tibbles automatically ignore row names:
+One big difference between dataframes and tibbles is that tibbles automatically ignore row names:
 
 ```{r}
 head(mtcars, 3)
