--- a/rmark.Rmd
+++ b/rmark.Rmd
@@ -5,26 +5,26 @@ output:
   pdf_document:
     fig_caption: no
 ---
-
-```{r, echo=FALSE, warning=FALSE, message=FALSE}
-whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
-
-require(knitr)
-require(ggplot2)
-require(grid)
-require(leaps)
-```
-`r rmd$basefontsize()`
-
 <style>
 table, th, td { text-align:right; }
 th, td {padding: 10px;}
 </style>
 
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+whichcomp <- strsplit(getwd(),"/")[[1]][3]
+load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+library(knitr)
+opts_chunk$set(fig.width=6, fig.align = "center", 
+      out.width = "70%", warning=FALSE, message=FALSE)
+library(ggplot2)
+library(grid)
+```
+`r hl()$basefontsize()`
+
+
 #R Markdown
 
-R Markdown is a file format for making dynamic documents with R. An R Markdown document is written in markdown (an easy-to-write plain text format) and contains chunks of embedded R code. It has a number of great features:
+R Markdown is a program for making dynamic documents with R. An R Markdown document is written in markdown (an easy-to-write plain text format) ith hefiles extension .Rmd and contains chunks of embedded R code. It has a number of great features:
 
 -  easy syntax for a number of basic objects  
 -  code and output are in the same place and so are always synced  
@@ -32,7 +32,7 @@ R Markdown is a file format for making dynamic documents with R. An R Markdown d
 
 ###Get Started
 
-to start writing an R Markdown document open RStudio, File - New File - R Markdown. You can type in the title and some other things.
+to start writing an R Markdown document open RStudio, File > New File > R Markdown. You can type in the title and some other things.
 
 The default document starts like this:
 
@@ -43,9 +43,11 @@ date: "April 1, 2018"
 output: html_document  
 \-\-\-
 
-This follows a syntax called YAML (also used by other programs).
+This follows a syntax called YAML (also used by other programs). There are other things that can be put here as well, or you can erase all of it.
 
-Then there is other stuff you should erase. Next File - Save. Give the document a name with the extension .Rmd
+Then there is other stuff you should erase. Next File > Save. Give the document a name with the extension .Rmd
+
+I have a number of things that I need in (almost) all of my Rmd files, and I am to lazy to erase the stuff that the default starting document comes with. So I found the file that RStudio uses at this point, it is called r_markdown_v2.Rmd and sits in the folder ../RStudio/resources/templates (on my Win 10 machine, anyway). I renamed it  r_markdown_v2OLD.Rmd (just so I can get it back if somethi goes wrong) and put what I want in it. Now when I click on  File > New File > R Markdown, I get a file that s ready to go!
 
 ###Basic R Markdown Syntax
 
@@ -67,14 +69,14 @@ simultaneously enter CTRL-ALT-i and you will see this:
 you can now enter any R code you like:
 
 \`\`\`{r}  
-x<-rnorm(10)  
+x <- rnorm(10)  
 mean(x)  
 \`\`\`
 
 which will appear in the final document as
 
 ```{r eval=FALSE}
-x<-rnorm(10)
+x <- rnorm(10)
 mean(x)
 ```
 
@@ -96,7 +98,7 @@ there are several useful arguments:
 -  eval=FALSE  (shows but doesn't run the code)  
 -  eval=2:5 (shows all the code but only runs lines 2 to 5)
 -  echo=FALSE  (the code chunk is run but does not appear in the document)  
--  echo=2:5 (shows only code on linees 2 to 5)  
+-  echo=2:5 (shows only code on lines 2 to 5)  
 -  warning=FALSE  (warnings are not shown)  
 -  message=FALSE (messages) are not shown)  
 -  cache=TRUE  (code is run only if there has been a change, useful for lengthy calculations)  
@@ -115,11 +117,23 @@ txt <-"\`r mean(x)\`"
 cat(txt)
 ```
 
+Many of these options can be set globally, so they are activefor the whole document. This is useful so you don't have to type them in every time. I have the following code chunk at the beginning of all my Rmd:
+
+```{r eval=FALSE}
+library(knitr)
+opts_chunk$set(fig.width=6, fig.align = "center", 
+      out.width = "70%", warning=FALSE, message=FALSE)
+```
+
+We have already seen the message and warning options. The other one puts any figure in the middle of the page and sizes it nicely.
+
+If you have to overide these defaults just include that in the specific chunk.
+
 ###Creating Output
 
-To create the output you have to "knit" the document. This is done by clicking on the knit button above. If you click on the arrow you can change the output format.
+To create the output you have to "knit" the document. This is done by clicking on the *knit* button above. If you click on the arrow you can change the output format.
 
-###HTML vs Latex(Pdf)
+####HTML vs Latex(Pdf)
 
 In order to knit to pdf you have to install a latex interpreter. My suggestion is to use 
 
@@ -130,13 +144,15 @@ There are several advantages / disadvantages to each output format:
 -  HTML is much faster  
 -  HTML looks good on a webpage, pdf looks good on paper  
 -  HTML needs an internet connection to display math, pdf does not  
--  HTML can use both html and latex syntax, pdf works only with latex.
+-  HTML can use both html and latex syntax, pdf works only with latex (and a little bit of html)
 
 I generally use HTML when writting a document, and use pdf only when everything else is done. There is one problem with this, namely that a document might well knit ok to HTML but give an error message when knitting to pdf. Moreover, those error messages are weird! Not even the line numbers are anywhere near right. So it's not a bad idea to also knit to pdf every now and then.
 
 ###Tables
 
-One of the more complicated things to do in R Markdown is tables. For a nice illustration look at [https://stackoverflow.com/questions/19997242/simple-manual-rmarkdown-tables-that-look-good-in-html-pdf-and-docx](https://stackoverflow.com/questions/19997242/simple-manual-rmarkdown-tables-that-look-good-in-html-pdf-and-docx)
+One of the more complicated things to do in R Markdown is tables. For a nice illustration look at
+
+[https://stackoverflow.com/questions/19997242/simple-manual-rmarkdown-tables-that-look-good-in-html-pdf-and-docx](https://stackoverflow.com/questions/19997242/simple-manual-rmarkdown-tables-that-look-good-in-html-pdf-and-docx)
 
 My preference is to generate a data frame and the use the *kable* function:
 
@@ -171,28 +187,40 @@ will look like this in HTML:
 
 but won't look like anything in pdf. 
 
-$$
-\begin{table}[!htbp] \centering
-\begin{tabular}{cc}
-\hline
-   Gender   &   Age \\
- Male & 20 \\
- Male & 21 \\
- Female & 19 \\
-\hline
-\end{tabular}
-\end{table}
-$$
+The corresponding latex table will look good in pdf but not in HTML!
 
-will look good in pdf but not in HTML!
+There is a solution, however: the document can check what the output format is at run time, and then insert the corresponding code. This works as follows. Say we want to include some code to print a piece of text in red, say for highlighting it. Now in html we would need the code \<font color="red">, then the text and finally \</font> to get back to black. In latex however we need \\textcolor{red}{our text}. Here is a little routine that will do it:
+
+```{r}
+fontcolor <- function (txt) 
+{
+  library(knitr)
+  output.format = opts_knit$get("rmarkdown.pandoc.to")
+  if(output.format == "latex") 
+      out <- paste0("\\textcolor{red}{", txt, "}")
+  else out <- paste0("<font color='red'>", txt, "</font>")
+    out
+}
+```
+
+and now if we have
+
+```{r, echo=FALSE}
+txt <- paste0("\`r fontcolor(\"this is in red\")\`")
+cat(txt)
+```
+
+it will appear as `r fontcolor("this is in red")` in either html or latex.
+
 
 ###LATEX
 
+Because latex code will generally display correctly in an html document but html will not in a latex document I suggest to stick as much as possible with latex.
+
 A nice list of common symbols is found on [https://artofproblemsolving.com/wiki/index.php/LaTeX:Symbols](https://artofproblemsolving.com/wiki/index.php/LaTeX:Symbols).
 
-Some additional comments:
 
--  Multiline math
+####Multiline math
 
 say you want the following in your document:
 
@@ -208,11 +236,20 @@ for this to display correctly in HTML and PDF you need to use the format
 ```{r, echo=FALSE}
 txt <- c(" $$\n",
          "\\begin{aligned}\n",
-         "&E[X] = \\int_{-\\infty}^{\\infty} xf(x) dx=\\ \n",
+         "&E[X] = \\int_{-\\infty}^{\\infty} xf(x) dx=\\\\ \n",
          "&\\int_{0}^{1} x dx    = \\frac12 x^2 |_0^1 = \\frac12 \n",
           "\\end{aligned}\n",
           "$$"
          )
 cat(txt)
 ```
+
+##snippets
+
+A *snippet* is a short piece of code that one uses quite often, and so it would be nice not to have to type it in every time. RStudio has a number of them pre-defined. Go to Tools > Global Options > Code > Edit Snippets.
+
+There are snippets for various languags, incuding R Markdown. To use a snippet, simply type the code and the Shift+Tab.
+
+You can even wright your own! For example, I have one called mta that has all the basics to start a multi-line latex math expression.
+
 
